--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ https://www.tooplate.com/view/2115-marvel
                 
                 <div class="col-lg-7 col-md-12 col-12 d-flex align-items-center">
                     <div class="about-text">
-                        <small class="small-text">Welcome to <span class="mobile-block">my portfolio!</span></small>
+                        <small class="small-text">Welcome to <span class="mobile-block"My ortfolio!</span></small>
                         <h1 class="animated animated-text">
                             <span class="mr-2">Hey folks, I'm</span>
                                 <div class="animated-info">
@@ -94,7 +94,7 @@ https://www.tooplate.com/view/2115-marvel
 
                 <div class="col-lg-5 col-md-12 col-12">
                     <div class="about-image svg">
-                        <img src="images/undraw/thumb.jpg" class="img-fluid" alt="image">
+                        <img src="images/undraw/thumb.jpeg" class="img-fluid" alt="image">
                     </div>
                 </div>
 
