--- a/index.html
+++ b/index.html
@@ -149,20 +149,22 @@ https://www.tooplate.com/view/2115-marvel
                 </div>
         </div>
     </section>
+ <!-- FEATURES -->
+ <section class="resume py-5 d-lg-flex justify-content-center align-items-center" id="resume">
+  <div class="container">
+      <div class="row">
 
-    <!-- FEATURES -->
-    <section class="resume py-5 d-lg-flex justify-content-center align-items-center" id="resume">
-        <div class="container">
-            <div class="row">
 
-                <div class="col-lg-6 col-12">
-                  <h2 class="mb-4">Experiences</h2>
+        <div class="item">
+                    <divclass ="project-info">
+                      <img src="images/project/image1.png" class="img-fluid" alt="project image">
+                    </div>
+                  </div>
 
-                    <img src="images/project/image1.png" class="img fluid" alt="project image">
-                </div>
+          
+
                 
-            </div>
-        </div>
+  
     </section>
 
     <!-- CONTACT -->
