--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ https://www.tooplate.com/view/2115-marvel
 
                         <div class="item">
                           <div class ="project-info">
-                            <img src="images/project/image4.png" class="img-fluid" alt="project image">
+                            <img src="images/project/image4.PNGSA" class="img-fluid" alt="project image">
                           </div>
                         </div>
 
