--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ https://www.tooplate.com/view/2115-marvel
                       <div class="owl-carousel owl-theme">
                         <div class="item">
                           <div class="project-info">
-                            <img src="images/project/project-image1.png" class="img-fluid" alt="project image">
+                            <img src="images/project/Agro.jpeg" class="img-fluid" alt="project image">
                           </div>
                         </div>
 
@@ -134,7 +134,7 @@ https://www.tooplate.com/view/2115-marvel
 
                         <div class="item">
                           <div class ="project-info">
-                            <img src="images/project/image4.PNGSA" class="img-fluid" alt="project image">
+                            <img src="images/project/image4.PNG" class="img-fluid" alt="project image">
                           </div>
                         </div>
 
